--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 #[build]
 #  command = "npm start"
 
-#[[redirects]]
-#  from = "/api/*"
-#  to = "/.netlify/functions/:splat"
-#  status = 200
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
 #[[edge_functions]]
 #  function = "wapp"
